syntax = "proto3";

option java_multiple_files = true;

option java_package = "ordering";

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

enum Payment {
  PAYMENT_UNKNOWN = 0;
  CREDIT_CARD = 1;
  DEBIT_CARD = 2;
  PAYPAL = 3;
  BANK_TRANSFER = 4;
  CASH_ON_DELIVERY = 5;
}

enum Status {
  STATUS_UNKNOWN = 0;     
  PENDING = 1;
  PROCESSING = 2;
  COMPLETED = 3;
  CANCELLED = 4;
}

message Address {
    string province = 1;
    string district = 2;
    string ward = 3;      
    string homeAddress = 4;
}

message Info {
    string name = 1;
    string phone = 2;
    string email = 3;
}

message Customer {
    string id = 1;
    Info info = 2;
    Address address = 3;
}

message Attribute{
    string name = 1;
    repeated string values = 2;
    int32 quantity = 3;
}

message Product {
    string id = 1;
    string name = 2;
    double price = 3;
    
}

message OrderRequest {
    Customer customer = 1;
    Product product = 2;
    repeated Attribute attributes = 3;
    Payment payment = 4;
}

message OrderResponse {
    string id = 1;
    Customer customer = 2;
    Product product = 3;
    repeated Attribute attributes = 4;
    int32 total_quantity = 5;
    double totalPrice = 6;
    Status status = 7; 
    Payment payment = 8;
}
